testcases/4-xfcc-client-cert-details/httpbin-gw4.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  labels:
    gw: istio-ingressgateway
  name: httpbin-gw4
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - httpbin/httpbin.example.com
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: httpbin-credential
      mode: MUTUAL
