testcases/4-xfcc-client-cert-details/httpbin-vs4.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin-vs4
  namespace: httpbin
spec:
  gateways:
  - istio-system/httpbin-gateway4
  hosts:
  - httpbin.example.com
  http:
  - name: http
    route:
    - destination:
        host: httpbin.httpbin.svc.cluster.local
        port:
          number: 8000
      weight: 100
